# img2miro

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
img2miro/: __init__.py  cli.py  extractor.py  layout.py  miro_client.py  preview.py  schema.py
tests/: test_cli.py  test_extractor.py  test_layout.py  test_mapping.py
